force-app/main/default/objects/Account/fields/countOfContacts__c.field-meta.xml
<CustomField>
    <fullName>countOfContacts__c</fullName>
    <label>countOfContacts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>