force-app/main/default/objects/Account/fields/No_of_Male_Contacts__c.field-meta.xml
<CustomField>
    <fullName>No_of_Male_Contacts__c</fullName>
    <label>No of Male Contacts</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>